# ProjektowanieEfektywnychAlgorytmow

./: CMakeLists.txt  main.cpp
Algorytm/ACO/: ACO.cpp  ACO.h  ACOTesty.cpp  ACOTesty.h
Algorytm/BruteForce/: BruteForce.cpp  BruteForce.h  BruteForceTesty.cpp  BruteForceTesty.h
Algorytm/DP/: DP.cpp  DP.h  DPTesty.cpp  DPTesty.h
Algorytm/SA/: SATesty.cpp  SATesty.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
Struktury/Graf/: Graf.cpp  Graf.h
Struktury/Lista/: lista.cpp  lista.h
Struktury/Tablica/: tablica.cpp  tablica.h
Struktury/TablicaI/: tablicaI.cpp  tablicaI.h
