cmake_minimum_required(VERSION 3.24)
project(PEAProjekt1)

set(CMAKE_CXX_STANDARD 14)

add_executable(PEAProjekt1 main.cpp Struktury/Graf/Graf.cpp Struktury/Graf/Graf.h Struktury/Tablica/tablica.cpp Struktury/Tablica/tablica.h Algorytm/BruteForce/BruteForce.cpp Algorytm/BruteForce/BruteForce.h Algorytm/DP/DP.cpp Algorytm/DP/DP.h Struktury/TablicaI/tablicaI.cpp Struktury/TablicaI/tablicaI.h Algorytm/BruteForce/BruteForceTesty.cpp Algorytm/BruteForce/BruteForceTesty.h Algorytm/DP/DPTesty.cpp Algorytm/DP/DPTesty.h Algorytm/SA/SimulatedAnnealing.cpp Algorytm/SA/SimulatedAnnealing.h Struktury/Lista/listaElement.cpp Struktury/Lista/listaElement.h Struktury/Lista/lista.h Struktury/Lista/lista.cpp)
